--- a/DroneFollowMe/pretraining-model/VisDrone.yaml
+++ b/DroneFollowMe/pretraining-model/VisDrone.yaml
@@ -1,3 +1,5 @@
+#From VisDrone.yaml GitHub directory
+
 path: ./VisDrone # dataset root dir
 train: train/images # train images (relative to 'path')  6471 images
 val: val/images # val images (relative to 'path')  548 images
